--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h4><i class="hero-icon" data-lucide="zap"></i>Your Shortcut To Instant OTPs</h4>
                 <h1>Buy Foreign Numbers Instantly. Verify Without Limits.</h1>
                 <p>SmartDigits gives you instant access to foreign numbers so you can verify WhatsApp, Instagram,
-                    TikTok, Telegram, and more. No SIM cards, no stress — just fast, secure, and affordable app
+                    TikTok, Telegram, and more. No SIM cards, no stress just fast, secure, and affordable app
                     verification.</p>
                 <div class="hero-cta">
                     <a class="cta" href="#">Get Started</a>
@@ -67,32 +67,29 @@
             </article>
             <div class="service-container">
                 <div class="service-card">
-                    <i class="scard-icon" data-lucide="arrow-up-right"></i>
+                    <i class="scard-icon" data-lucide="phone-incoming"></i>
                     <h5>Instant Foreign Numbers</h5>
                     <p>Purchase foreign numbers from multiple countries in seconds. No SIM cards required — fast,
                         reliable, and ready whenever you need them.</p>
 
                 </div>
                 <div class="service-card">
+                     <i class="scard-icon" data-lucide="shield-check"></i>
                     <h5>OTP Delivery</h5>
-                    <p>Get one-time passwords delivered instantly for smooth account setup. No delays, no failed
-                        messages — just codes that work every time.</p>
-                    <i class="scard-icon" data-lucide="arrow-up-right"></i>
-
+                    <p>Get one-time passwords delivered instantly for smooth account setup. No delays, no failed messages — just codes that work every time.</p>
+                   
                 </div>
                 <div class="service-card">
-                    <i class="scard-icon" data-lucide="arrow-up-right"></i>
+                    <i class="scard-icon" data-lucide="layers"></i>
                     <h5>Multi-App Support</h5>
-                    <p>Verify WhatsApp, Instagram, TikTok, Telegram, and other platforms easily. One solution for all
-                        your app verification needs.</p>
+                    <p>Verify WhatsApp, Instagram, TikTok, Telegram, and other platforms easily. One solution for allyour app verification needs.</p>
 
                 </div>
                 <div class="service-card">
-
+                    <i class="scard-icon" data-lucide="dollar-sign"></i>
                     <h5>Affordable Pricing</h5>
-                    <p>Enjoy simple and budget-friendly pricing. No hidden charges — only pay for what you need, when
-                        you need it.</p>
-                    <i class="scard-icon" data-lucide="arrow-up-right"></i>
+                    <p>Enjoy simple and budget-friendly pricing. No hidden charges — only pay for what you need, when you need it.</p>
+                    
                 </div>
             </div>
         </section>
@@ -102,7 +99,7 @@
                     <h4 class="tag">How It Works</h4>
                     <h3>How SmartDigits Works</h3>
                     <p>SmartDigits makes SMS verification seamless with instant foreign numbers. Verify accounts on
-                        WhatsApp, Instagram, TikTok, Telegram, and more — fast, secure, and hassle-free.</p>
+                        WhatsApp, Instagram, TikTok, Telegram, and more fast, secure, and hassle-free.</p>
                 </div>
             </article>
             <div class="how-it-container">
