--- a/index.html
+++ b/index.html
@@ -155,42 +155,120 @@
                 </div>
         </section>
 
-       <!--<section class="faq">
-  <div class="container">
-    <h2>❓ Frequently Asked Questions</h2>
-    <p class="sub-heading">Quick answers to help you get started with SmartDigits</p>
-
-    <div class="faq-item">
-      <h3>🔐 What is SmartDigits?</h3>
-      <p>SmartDigits is a platform that lets you buy foreign numbers instantly to receive OTP codes and verify accounts like WhatsApp, Instagram, TikTok, Telegram, and more.</p>
+    <section class="frequently">
+    <div class="faq-container">
+      <div class="faq-left-content">
+        <h4 class="faq-label">Frequently Asked Questions</h4>
+        <h1 class="faq-heading">Everything You Need to Know</h1>
+        <p class="faq-sub-heading">Quick answers to guide you through SmartDigits and make your verification seamless.</p>
     </div>
 
-    <div class="faq-item">
-      <h3>💳 How do I fund my wallet?</h3>
-      <p>Once you sign up, a virtual account number will be generated for you. You can top up your wallet anytime using this account.</p>
-    </div>
+      <section class="right" aria-label="FAQ">
+        <div class="faq-card">
+          <button class="faq-head" aria-expanded="true">
+            <span>What is SmartDigits?</span>
+            <span class="chev">
+               <i class="hcard-icon" data-lucide="circle-plus"></i>
+            </span>
+          </button>
+          <div class="faq-body" style="display:block;">
+            <p>SmartDigits is a platform that lets you buy foreign numbers instantly to receive OTP codes and verify accounts on WhatsApp, Instagram, TikTok, Telegram, and more.</p>
+          </div>
+        </div>
 
-    <div class="faq-item">
-      <h3>📲 How fast will I get my OTP?</h3>
-      <p>OTP delivery is instant. Once you use the foreign number provided, your code will appear on your dashboard immediately.</p>
-    </div>
+        <div class="faq-card">
+          <button class="faq-head" aria-expanded="false">
+            <span>How do I fund my wallet?</span>
+             <i class="hcard-icon" data-lucide="circle-plus"></i>
+            </span>
+          </button>
+          <div class="faq-body" hidden>
+            <p>When you create an account, you’ll get a unique virtual account number. Simply make a transfer to this account, and your wallet will be credited instantly.</p>
+          </div>
+        </div>
 
-    <div class="faq-item">
-      <h3>🌍 Which platforms do you support?</h3>
-      <p>We support major apps like WhatsApp, Instagram, TikTok, Telegram, and more global services that require SMS verification.</p>
-    </div>
+        <div class="faq-card">
+          <button class="faq-head" aria-expanded="false">
+            <span> How fast will I receive my OTP?</span>
+             <i class="hcard-icon" data-lucide="circle-plus"></i>
+            </span>
+          </button>
+          <div class="faq-body" hidden>
+            <p>OTP delivery is instant. The moment you use the foreign number provided, your verification code appears right on your SmartDigits dashboard.</p>
+          </div>
+        </div>
 
-    <div class="faq-item">
-      <h3>👨‍💻 Do you offer customer support?</h3>
-      <p>Yes! Our 24/7 customer support team is always available to assist you with any issues or questions.</p>
+        <div class="faq-card">
+          <button class="faq-head" aria-expanded="false">
+            <span>Which apps and platforms can I verify?</span>
+            <i class="hcard-icon" data-lucide="circle-plus"></i>
+            </span>
+          </button>
+          <div class="faq-body" hidden>
+            <p>We support popular platforms such as WhatsApp, Instagram, TikTok, Telegram, Facebook, and many other global services that require SMS verification.</p>
+          </div>
+        </div>
+        <div class="faq-card">
+          <button class="faq-head" aria-expanded="false">
+            <span>Do you offer customer support?</span>
+            <i class="hcard-icon" data-lucide="circle-plus"></i>
+            </span>
+          </button>
+          <div class="faq-body" hidden>
+            <p>Yes! Our support team is available 24/7 to help you with wallet funding, orders, or any issues you encounter.</p>
+          </div>
+        </div>
+        <div class="faq-card">
+          <button class="faq-head" aria-expanded="false">
+            <span>Are your services affordable?</span>
+            <i class="hcard-icon" data-lucide="circle-plus"></i>
+            </span>
+          </button>
+          <div class="faq-body" hidden>
+            <p>Absolutely! SmartDigits is built to be pocket-friendly while maintaining top-notch speed and security.</p>
+          </div>
+        </div>
+      </section>
     </div>
-  </div>
-</section>-->
+    </section>
+    
+
 
 
     </main>
     <script>
         lucide.createIcons();
+    </script>
+    <script>
+        // Simple accessible accordion behavior
+document.querySelectorAll('.faq-card').forEach(card => {
+  const btn = card.querySelector('.faq-head');
+  const panel = card.querySelector('.faq-body');
+
+  btn.addEventListener('click', () => {
+    const expanded = btn.getAttribute('aria-expanded') === 'true';
+
+    // close any open panels if you want only one open at a time
+    document.querySelectorAll('.faq-head[aria-expanded="true"]').forEach(openBtn => {
+      if(openBtn !== btn){
+        openBtn.setAttribute('aria-expanded', 'false');
+        const p = openBtn.closest('.faq-card').querySelector('.faq-body');
+        p.hidden = true;
+        p.style.display = 'none';
+      }
+    });
+
+    if (expanded) {
+      btn.setAttribute('aria-expanded', 'false');
+      panel.hidden = true;
+      panel.style.display = 'none';
+    } else {
+      btn.setAttribute('aria-expanded', 'true');
+      panel.hidden = false;
+      panel.style.display = 'block';
+    }
+  });
+});
     </script>
 </body>
 
