--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <p class="faq-sub-heading">Quick answers to guide you through SmartDigits and make your verification seamless.</p>
     </div>
 
-      <section class="right" aria-label="FAQ">
+      <section class="faq-right" aria-label="FAQ">
         <div class="faq-card">
           <button class="faq-head" aria-expanded="true">
             <span>What is SmartDigits?</span>
