--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <h4 class="tag">How It Works</h4>
           <h3>How SmartDigits Works</h3>
           <p>SmartDigits makes SMS verification seamless with instant foreign numbers. Verify accounts on
-            WhatsApp, Instagram, TikTok, Telegram, and more fast, secure, and hassle-free.</p>
+            WhatsApp, Instagram, TikTok, and more fast, secure.</p>
         </div>
       </article>
       <div class="how-it-container">
@@ -190,7 +190,7 @@
       <div class="t-header">
         <h4 class="tag">Testimonial</h4>
         <h3> What Our Customers Say</h3>
-        <p>Trusted by users worldwide for fast and secure OTP verification</p>
+        <p>Trusted by users worldwide for fast and secure OTP verification.</p>
       </div>
 
       <div class="testimonial-container">
