--- a/index.html
+++ b/index.html
@@ -301,6 +301,42 @@
       </div>
     </section>
 
+    <!-- Contact Support Block -->
+<section class="contact-block">
+  <div class="contact-card">
+    <div class="contact-left">
+      <h3 class="contact-title"><i class="ct-icon" data-lucide="message-circle"></i>More Questions?</h3>
+      <p class="contact-sub">We’re always ready to help you out anytime, anywhere.</p>
+
+      <div class="avatars">
+        <img src="https://i.pravatar.cc/64?img=12" alt="Support 1" />
+        <img src="https://i.pravatar.cc/64?img=22" alt="Support 2" />
+        <img src="https://i.pravatar.cc/64?img=32" alt="Support 3" />
+        <img src="https://i.pravatar.cc/64?img=42" alt="Support 4" />
+      </div>
+    </div>
+
+    <div class="contact-right">
+      <a class="contact-cta" href="https://wa.me/2349051073446" target="_blank" rel="noopener">
+        Contact Support
+      </a>
+      <p class="contact-note">Available 24/7 on Email & WhatsApp</p>
+    </div>
+  </div>
+</section>
+
+<section class="ft-cta">
+  <div class="cta-container">
+    <h2>✨ Ready to Verify Instantly?</h2>
+    <p>Get your foreign number in seconds. Fast, secure, and always available.</p>
+    <div class="cta-buttons">
+      <a href="#get-started" class="btn-primary">Get Started Now</a>
+      <a href="#how-it-works" class="btn-secondary">Watch How It Works</a>
+    </div>
+    <small>⚡ Join thousands of users already verifying with SmartDigits.</small>
+  </div>
+</section>
+
 
 
 
