--- a/index.html
+++ b/index.html
@@ -336,11 +336,44 @@
     <small>⚡ Join thousands of users already verifying with SmartDigits.</small>
   </div>
 </section>
-
-
-
-
   </main>
+  <footer class="footer">
+  <div class="footer-container">
+
+    <!-- Logo & About -->
+    <div class="footer-about">
+      <img src="https://i.ibb.co/DPQkz9xP/Smart-Digits-B-2-2.png" alt="SmartDigits Logo" class="footer-logo">
+      <p>SmartDigits is your trusted platform for instant foreign numbers to verify WhatsApp, Instagram, TikTok, Telegram, and more. Fast, secure, and always available.</p>
+    </div>
+
+    <!-- Quick Links -->
+    <div class="footer-links">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#services">Our Solutions</a></li>
+        <li><a href="#how-it-works">How It Works</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <!-- Social Media -->
+    <div class="footer-social">
+      <h4>Follow Us</h4>
+      <div class="social-icons">
+        <a href="https://facebook.com/SmartDigitsHQ" target="_blank"><i data-lucide="facebook"></i></a>
+        <a href="https://instagram.com/SmartDigitsHQ" target="_blank"><i data-lucide="instagram"></i></a>
+        <a href="https://x.com/@SmartDigitsHQ" target="_blank"><i data-lucide="twitter"></i></a>
+        <a href="https://wa.me/2349051073446" target="_blank"><i data-lucide="message-circle"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2025 SmartDigits. All rights reserved.</p>
+  </div>
+</footer>
 
   <script>
     lucide.createIcons();
