--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SmartDigits - Your Shortcut To Instant OTPs</title>
+  <!-- Meta Description -->
+  <meta name="description"
+    content="SmartDigits is your shortcut to instant OTPs. Buy foreign numbers instantly to verify WhatsApp, Instagram, TikTok, Telegram & more. Fast, secure, and affordable.">
+
+  <!-- Keywords -->
+  <meta name="keywords"
+    content="instant OTPs, buy foreign number, virtual numbers, SMS verification, WhatsApp OTP, Instagram verification, TikTok number, Telegram OTP, SmartDigits">
+
+  <!-- Author -->
+  <meta name="author" content="SmartDigits">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="SmartDigits - Your Shortcut to Instant OTPs">
+  <meta property="og:description"
+    content="Buy foreign numbers instantly to verify WhatsApp, Instagram, TikTok & more. Fast, secure, and affordable SMS verification with SmartDigits.">
+  <meta property="og:image" content="https://smartdigits.ng/og-image.jpg">
+  <meta property="og:url" content="https://smartdigits.ng">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="SmartDigits - Your Shortcut to Instant OTPs">
+  <meta name="twitter:description"
+    content="Instant SMS verification for WhatsApp, Instagram, TikTok & more. Buy foreign numbers instantly with SmartDigits.">
+  <meta name="twitter:image" content="https://smartdigits.ng/og-image.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!-- Lucide Icons CDN -->
   <script src="https://unpkg.com/lucide@latest"></script>
 
@@ -54,58 +82,58 @@
         <img src="https://i.ibb.co/0j4cJYgs/hero-image.png" alt="hero-image">
       </div>
     </section>
-<section class="supported">
-  <div class="su-header">
-    <h4><i class="su-icon" data-lucide="circle-check"></i>Supported Platforms</h4>
-  </div>
-
-    <div class="social-media-carousel">
-      <div class="carousel-track">
-        <!-- Social Media Cards -->
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg"
-            class="icon">Facebook</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/twitter.svg"
-            class="icon">Twitter</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg"
-            class="icon">Instagram</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
-            class="icon">LinkedIn</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtube.svg"
-            class="icon">YouTube</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/pinterest.svg"
-            class="icon">Pinterest</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/snapchat.svg"
-            class="icon snapchat-icon">Snapchat</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/reddit.svg"
-            class="icon">Reddit</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg"
-            class="icon">TikTok</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg"
-            class="icon">WhatsApp</div>
-
-        <!-- Duplicate for smooth continuous scroll -->
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg"
-            class="icon">Facebook</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/twitter.svg"
-            class="icon">Twitter</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg"
-            class="icon">Instagram</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
-            class="icon">LinkedIn</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtube.svg"
-            class="icon">YouTube</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/pinterest.svg"
-            class="icon">Pinterest</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/snapchat.svg"
-            class="icon snapchat-icon">Snapchat</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/reddit.svg"
-            class="icon">Reddit</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg"
-            class="icon">TikTok</div>
-        <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg"
-            class="icon">WhatsApp</div>
+    <section class="supported">
+      <div class="su-header">
+        <h4><i class="su-icon" data-lucide="circle-check"></i>Supported Platforms</h4>
       </div>
-    </div>
+
+      <div class="social-media-carousel">
+        <div class="carousel-track">
+          <!-- Social Media Cards -->
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg"
+              class="icon">Facebook</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/twitter.svg"
+              class="icon">Twitter</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg"
+              class="icon">Instagram</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
+              class="icon">LinkedIn</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtube.svg"
+              class="icon">YouTube</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/pinterest.svg"
+              class="icon">Pinterest</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/snapchat.svg"
+              class="icon snapchat-icon">Snapchat</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/reddit.svg"
+              class="icon">Reddit</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg"
+              class="icon">TikTok</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg"
+              class="icon">WhatsApp</div>
+
+          <!-- Duplicate for smooth continuous scroll -->
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg"
+              class="icon">Facebook</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/twitter.svg"
+              class="icon">Twitter</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg"
+              class="icon">Instagram</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
+              class="icon">LinkedIn</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtube.svg"
+              class="icon">YouTube</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/pinterest.svg"
+              class="icon">Pinterest</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/snapchat.svg"
+              class="icon snapchat-icon">Snapchat</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/reddit.svg"
+              class="icon">Reddit</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg"
+              class="icon">TikTok</div>
+          <div class="social-card"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg"
+              class="icon">WhatsApp</div>
+        </div>
+      </div>
     </section>
 
 
@@ -302,78 +330,79 @@
     </section>
 
     <!-- Contact Support Block -->
-<section class="contact-block">
-  <div class="contact-card">
-    <div class="contact-left">
-      <h3 class="contact-title"><i class="ct-icon" data-lucide="message-circle"></i>More Questions?</h3>
-      <p class="contact-sub">We’re always ready to help you out anytime, anywhere.</p>
+    <section class="contact-block">
+      <div class="contact-card">
+        <div class="contact-left">
+          <h3 class="contact-title"><i class="ct-icon" data-lucide="message-circle"></i>More Questions?</h3>
+          <p class="contact-sub">We’re always ready to help you out anytime, anywhere.</p>
 
-      <div class="avatars">
-        <img src="https://i.pravatar.cc/64?img=12" alt="Support 1" />
-        <img src="https://i.pravatar.cc/64?img=22" alt="Support 2" />
-        <img src="https://i.pravatar.cc/64?img=32" alt="Support 3" />
-        <img src="https://i.pravatar.cc/64?img=42" alt="Support 4" />
+          <div class="avatars">
+            <img src="https://i.pravatar.cc/64?img=12" alt="Support 1" />
+            <img src="https://i.pravatar.cc/64?img=22" alt="Support 2" />
+            <img src="https://i.pravatar.cc/64?img=32" alt="Support 3" />
+            <img src="https://i.pravatar.cc/64?img=42" alt="Support 4" />
+          </div>
+        </div>
+
+        <div class="contact-right">
+          <a class="contact-cta" href="https://wa.me/2349051073446" target="_blank" rel="noopener">
+            Contact Support
+          </a>
+          <p class="contact-note">Available 24/7 on Email & WhatsApp</p>
+        </div>
       </div>
-    </div>
+    </section>
 
-    <div class="contact-right">
-      <a class="contact-cta" href="https://wa.me/2349051073446" target="_blank" rel="noopener">
-        Contact Support
-      </a>
-      <p class="contact-note">Available 24/7 on Email & WhatsApp</p>
-    </div>
-  </div>
-</section>
-
-<section class="ft-cta">
-  <div class="cta-container">
-    <h2>✨ Ready to Verify Instantly?</h2>
-    <p>Get your foreign number in seconds. Fast, secure, and always available.</p>
-    <div class="cta-buttons">
-      <a href="#get-started" class="btn-primary">Get Started Now</a>
-      <a href="#how-it-works" class="btn-secondary">Watch How It Works</a>
-    </div>
-    <small>⚡ Join thousands of users already verifying with SmartDigits.</small>
-  </div>
-</section>
+    <section class="ft-cta">
+      <div class="cta-container">
+        <h2>✨ Ready to Verify Instantly?</h2>
+        <p>Get your foreign number in seconds. Fast, secure, and always available.</p>
+        <div class="cta-buttons">
+          <a href="#get-started" class="btn-primary">Get Started Now</a>
+          <a href="#how-it-works" class="btn-secondary">Watch How It Works</a>
+        </div>
+        <small>⚡ Join thousands of users already verifying with SmartDigits.</small>
+      </div>
+    </section>
   </main>
   <footer class="footer">
-  <div class="footer-container">
+    <div class="footer-container">
 
-    <!-- Logo & About -->
-    <div class="footer-about">
-      <img src="https://i.ibb.co/DPQkz9xP/Smart-Digits-B-2-2.png" alt="SmartDigits Logo" class="footer-logo">
-      <p>SmartDigits is your trusted platform for instant foreign numbers to verify WhatsApp, Instagram, TikTok, Telegram, and more. Fast, secure, and always available.</p>
-    </div>
+      <!-- Logo & About -->
+      <div class="footer-about">
+        <img src="https://i.ibb.co/DPQkz9xP/Smart-Digits-B-2-2.png" alt="SmartDigits Logo" class="footer-logo">
+        <p>SmartDigits is your trusted platform for instant foreign numbers to verify WhatsApp, Instagram, TikTok,
+          Telegram, and more. Fast, secure, and always available.</p>
+      </div>
 
-    <!-- Quick Links -->
-    <div class="footer-links">
-      <h4>Quick Links</h4>
-      <ul>
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#services">Our Solutions</a></li>
-        <li><a href="#how-it-works">How It Works</a></li>
-        <li><a href="#faq">FAQ</a></li>
-        <li><a href="#contact">Contact Us</a></li>
-      </ul>
-    </div>
+      <!-- Quick Links -->
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#services">Our Solutions</a></li>
+          <li><a href="#how-it-works">How It Works</a></li>
+          <li><a href="#faq">FAQ</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
+      </div>
 
-    <!-- Social Media -->
-    <div class="footer-social">
-      <h4>Follow Us</h4>
-      <div class="social-icons">
-        <a href="https://facebook.com/SmartDigitsHQ" target="_blank"><i data-lucide="facebook"></i></a>
-        <a href="https://instagram.com/SmartDigitsHQ" target="_blank"><i data-lucide="instagram"></i></a>
-        <a href="https://x.com/@SmartDigitsHQ" target="_blank"><i data-lucide="twitter"></i></a>
-        <a href="https://wa.me/2349051073446" target="_blank"><i data-lucide="message-circle"></i></a>
+      <!-- Social Media -->
+      <div class="footer-social">
+        <h4>Follow Us</h4>
+        <div class="social-icons">
+          <a href="https://facebook.com/SmartDigitsHQ" target="_blank"><i data-lucide="facebook"></i></a>
+          <a href="https://instagram.com/SmartDigitsHQ" target="_blank"><i data-lucide="instagram"></i></a>
+          <a href="https://x.com/@SmartDigitsHQ" target="_blank"><i data-lucide="twitter"></i></a>
+          <a href="https://wa.me/2349051073446" target="_blank"><i data-lucide="message-circle"></i></a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="footer-bottom">
-    <p>© 2025 SmartDigits. All rights reserved.</p>
-  </div>
-</footer>
+    <div class="footer-bottom">
+      <p>© 2025 SmartDigits. All rights reserved.</p>
+    </div>
+  </footer>
 
   <script>
     lucide.createIcons();
